@@ -12,9 +12,9 @@ artifactId=crawler-commons
 
 # For JavaDoc
 javadoc.package=crawlercommons
-javadoc.year=2011
+javadoc.year=2013
 javadoc.title=Crawler-commons
-javadoc.link.java=http://java.sun.com/j2se/1.6.0/docs/api/
+javadoc.link.java=http://docs.oracle.com/javase/7/docs/api/
 
 jar.name=${ant.project.name}-${version}.jar
 
@@ -52,7 +52,7 @@ coverage.html.dir=${reports.dir}/cobertura-html
 
 javac.debug=on
 javac.optimize=on
-javac.deprecation=off
+javac.deprecation=on
 javac.version=1.6
 javac.args=
 javac.args.warnings=-Xlint:none
